--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -135,7 +135,7 @@
   {%- endif -%}
 {%- else -%}
   <section>
-    <div class="flex-container">
+    <div class="announcement-bar flex-container">
       <div class="flex-items">
         <div class="copies">
             <div class="line-1">{{ section.settings.line_1 }}</div>
