--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16178,7 +16178,16 @@ input[disabled], input[type="text"][disabled], input[type="email"][disabled], in
 }
 
 .copies {
-  font-size: 11px;
+  font-size: 13px;
+}
+
+.line-1 {
+  font-family: var(--text-font-family);
+  font-style: var(--text-font-style);
+  text-transform: uppercase; /* Small headings are always uppercase */
+  font-weight: var(--text-font-bold-weight);
+  line-height: 1.4663636;
+  letter-spacing: 1px;
 }
 
 .link {
