--- a/snippets/desktop-menu.liquid
+++ b/snippets/desktop-menu.liquid
@@ -14,7 +14,7 @@
         {%- endif -%}
       {%- endfor -%}
 
-      <li class="header__linklist-item {% if link.links.size > 0 or mega_menu_block != '' %}has-dropdown{% endif %} {% if customer and link.title == "Archives" %}hidden{% end %} {% if !customer and link.title == "Black Friday" %}hidden{% end %}" data-item-title="{{ link.title | escape }}">
+      <li class="header__linklist-item {% if link.links.size > 0 or mega_menu_block != '' %}has-dropdown{% endif %} {% if customer and link.title == "ARCHIVES" %}hidden{% end %} {% if !customer and link.title == "BLACK FRIDAY" %}hidden{% end %}" data-item-title="{{ link.title | escape }}">
         <a class="header__linklist-link heading--small" href="{{ link.url }}" {% if link.links.size > 0 or mega_menu_block != '' %}aria-controls="desktop-menu-{{ forloop.index }}" aria-expanded="false"{% endif %}>
           {{- link.title -}}
         </a>
