--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -1,6 +1,6 @@
 <style>
   #shopify-section-{{ section.id }} {
-    --progress-bar-color: {{ section.blocks.first.settings.text_color.red }}, {{ section.blocks.first.settings.text_color.green }}, {{ section.blocks.first.settings.text_color.blue }};
+    --progress-bar-color: {{ section.blocks.last.settings.text_color.red }}, {{ section.blocks.last.settings.text_color.green }}, {{ section.blocks.last.settings.text_color.blue }};
     --section-autoplay-duration: {% if section.settings.autoplay %}{{ section.settings.cycle_speed }}s{% else %}0s{% endif %};
     --section-animation-play-state: paused;
     background-color: {{ section.settings.background }}; /* Allows to set a placeholder color while loading */
