--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -196,7 +196,7 @@
               </button>
             {% endif %}
           {%- else -%}
-            <button class="slideshow__progress-bar" aria-controls="block-{{ section.id }}-{{ block.id }}" {% if forloop.last %}aria-current="true"{% endif%}>
+            <button class="slideshow__progress-bar" aria-controls="block-{{ section.id }}-{{ block.id }}" {% if forloop.first %}aria-current="true"{% endif%}>
               <span class="visually-hidden">{{ 'general.accessibility.go_to_slide' | t: num: forloop.index }}</span>
             </button>
           {%- endif -%}
